deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
      version: v1
  template:
    metadata:
      name: my-nginx
      labels:
        app: my-nginx
        version: v1
    spec:
      containers:
        - image: nginx
          name: nginx-demo
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 256Mi
