deployment-src-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-deploy-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris-deploy
      version: v2
  template:
    metadata:
      name: iris-deploy
      labels:
        app: iris-deploy
        version: v2
    spec:
      containers:
        - image: 992744421/iris-demo-src
          name: iris-demo
          resources:
            requests:
              cpu: 100m
