pod-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iris-manual
  labels:
    env: debug
spec:
  containers:
    - image: 992744421/iris-demo
      name: iris-demo
      ports:
        - containerPort: 8080
          protocol: TCP
