svc-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-demo-svc
spec:
  ports:
    - port: 8080
      targetPort: 8001
  selector:
    app: iris-deploy
