svc-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-svc
spec:
  type: ExternalName
  externalName: v.juhe.cn
  ports:
    - name: http
      port: 8080
      targetPort: 80
