svc-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8001
  selector:
    app: iris-deploy
