svc-nginx-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: my-nginx
    version: v1
