svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8001
      nodePort: 30123
  selector:
    app: iris-demo1
