ingress_multi_host-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - host: as-test.mq.ink
      http:
        paths:
          - path: /api/v1/
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-demo1-svc
                port:
                  number: 8001
          - path: /api/v2/
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-demo2-svc
                port:
                  number: 8001
    - host: as-test.mq.ink
      http:
        paths:
          - path: /api/v3/
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-demo3-svc
                port:
                  number: 8001
          - path: /api/v4/
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-demo4-svc
                port:
                  number: 8001
    - host: as.mq.ink
      http:
        paths:
          - path: /api/v1/
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-demo2-svc
                port:
                  number: 8001
